tdf#126126 ODT import: improve import of cross-table commented text range

Regression from commit d4b473dd9ba77427b28d97847067b8877c2033d9
(office:annotation-end import, 2012-07-20), the problem was that
XMLAnnotationImportContext::EndElement() assumed that we can always call
gotoRange() to go from the annotation start and end points, but this is
not true: an annotation may start inside a table and end outside a
table, which is not a valid selection, so gotoRange() fails.

Fix the regression part by just creating a text range for the anchor of
the comment, so the comment is attached to the end of the range, and
this way the rest of the comment & the document can be at least opened.

[ It seems bookmarks behave similarly: they don't block the whole
import, but don't work cross table boundaries, either. ]

Change-Id: I1b5a2e2e7501ce3054379fc79d2045c3439c52e4